qt/multimedia/gen_qaudiosystem.nim


proc fcQAbstractAudioDeviceInfo_metaObject(self: pointer, ): pointer {.importc: "QAbstractAudioDeviceInfo_metaObject".}
proc fcQAbstractAudioDeviceInfo_metacast(self: pointer, param1: cstring): pointer {.importc: "QAbstractAudioDeviceInfo_metacast".}
proc fcQAbstractAudioDeviceInfo_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAbstractAudioDeviceInfo_metacall".}
proc fcQAbstractAudioDeviceInfo_tr(s: cstring): struct_miqt_string {.importc: "QAbstractAudioDeviceInfo_tr".}
proc fcQAbstractAudioDeviceInfo_trUtf8(s: cstring): struct_miqt_string {.importc: "QAbstractAudioDeviceInfo_trUtf8".}
proc fcQAbstractAudioDeviceInfo_preferredFormat(self: pointer, ): pointer {.importc: "QAbstractAudioDeviceInfo_preferredFormat".}
proc fcQAbstractAudioDeviceInfo_isFormatSupported(self: pointer, format: pointer): bool {.importc: "QAbstractAudioDeviceInfo_isFormatSupported".}
proc fcQAbstractAudioDeviceInfo_deviceName(self: pointer, ): struct_miqt_string {.importc: "QAbstractAudioDeviceInfo_deviceName".}
proc fcQAbstractAudioDeviceInfo_supportedCodecs(self: pointer, ): struct_miqt_array {.importc: "QAbstractAudioDeviceInfo_supportedCodecs".}
proc fcQAbstractAudioDeviceInfo_supportedSampleRates(self: pointer, ): struct_miqt_array {.importc: "QAbstractAudioDeviceInfo_supportedSampleRates".}
proc fcQAbstractAudioDeviceInfo_supportedChannelCounts(self: pointer, ): struct_miqt_array {.importc: "QAbstractAudioDeviceInfo_supportedChannelCounts".}
proc fcQAbstractAudioDeviceInfo_supportedSampleSizes(self: pointer, ): struct_miqt_array {.importc: "QAbstractAudioDeviceInfo_supportedSampleSizes".}
proc fcQAbstractAudioDeviceInfo_supportedByteOrders(self: pointer, ): struct_miqt_array {.importc: "QAbstractAudioDeviceInfo_supportedByteOrders".}
proc fcQAbstractAudioDeviceInfo_supportedSampleTypes(self: pointer, ): struct_miqt_array {.importc: "QAbstractAudioDeviceInfo_supportedSampleTypes".}
proc fcQAbstractAudioDeviceInfo_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAudioDeviceInfo_tr2".}
proc fcQAbstractAudioDeviceInfo_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAudioDeviceInfo_tr3".}
proc fcQAbstractAudioDeviceInfo_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAudioDeviceInfo_trUtf82".}
proc fcQAbstractAudioDeviceInfo_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAudioDeviceInfo_trUtf83".}
proc fcQAbstractAudioDeviceInfo_delete(self: pointer) {.importc: "QAbstractAudioDeviceInfo_delete".}
proc fcQAbstractAudioOutput_metaObject(self: pointer, ): pointer {.importc: "QAbstractAudioOutput_metaObject".}
proc fcQAbstractAudioOutput_metacast(self: pointer, param1: cstring): pointer {.importc: "QAbstractAudioOutput_metacast".}
proc fcQAbstractAudioOutput_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAbstractAudioOutput_metacall".}
proc fcQAbstractAudioOutput_tr(s: cstring): struct_miqt_string {.importc: "QAbstractAudioOutput_tr".}
proc fcQAbstractAudioOutput_trUtf8(s: cstring): struct_miqt_string {.importc: "QAbstractAudioOutput_trUtf8".}
proc fcQAbstractAudioOutput_start(self: pointer, device: pointer): void {.importc: "QAbstractAudioOutput_start".}
proc fcQAbstractAudioOutput_start2(self: pointer, ): pointer {.importc: "QAbstractAudioOutput_start2".}
proc fcQAbstractAudioOutput_stop(self: pointer, ): void {.importc: "QAbstractAudioOutput_stop".}
proc fcQAbstractAudioOutput_reset(self: pointer, ): void {.importc: "QAbstractAudioOutput_reset".}
proc fcQAbstractAudioOutput_suspend(self: pointer, ): void {.importc: "QAbstractAudioOutput_suspend".}
proc fcQAbstractAudioOutput_resume(self: pointer, ): void {.importc: "QAbstractAudioOutput_resume".}
proc fcQAbstractAudioOutput_bytesFree(self: pointer, ): cint {.importc: "QAbstractAudioOutput_bytesFree".}
proc fcQAbstractAudioOutput_periodSize(self: pointer, ): cint {.importc: "QAbstractAudioOutput_periodSize".}
proc fcQAbstractAudioOutput_setBufferSize(self: pointer, value: cint): void {.importc: "QAbstractAudioOutput_setBufferSize".}
proc fcQAbstractAudioOutput_bufferSize(self: pointer, ): cint {.importc: "QAbstractAudioOutput_bufferSize".}
proc fcQAbstractAudioOutput_setNotifyInterval(self: pointer, milliSeconds: cint): void {.importc: "QAbstractAudioOutput_setNotifyInterval".}
proc fcQAbstractAudioOutput_notifyInterval(self: pointer, ): cint {.importc: "QAbstractAudioOutput_notifyInterval".}
proc fcQAbstractAudioOutput_processedUSecs(self: pointer, ): clonglong {.importc: "QAbstractAudioOutput_processedUSecs".}
proc fcQAbstractAudioOutput_elapsedUSecs(self: pointer, ): clonglong {.importc: "QAbstractAudioOutput_elapsedUSecs".}
proc fcQAbstractAudioOutput_error(self: pointer, ): cint {.importc: "QAbstractAudioOutput_error".}
proc fcQAbstractAudioOutput_state(self: pointer, ): cint {.importc: "QAbstractAudioOutput_state".}
proc fcQAbstractAudioOutput_setFormat(self: pointer, fmt: pointer): void {.importc: "QAbstractAudioOutput_setFormat".}
proc fcQAbstractAudioOutput_format(self: pointer, ): pointer {.importc: "QAbstractAudioOutput_format".}
proc fcQAbstractAudioOutput_setVolume(self: pointer, volume: float64): void {.importc: "QAbstractAudioOutput_setVolume".}
proc fcQAbstractAudioOutput_volume(self: pointer, ): float64 {.importc: "QAbstractAudioOutput_volume".}
proc fcQAbstractAudioOutput_category(self: pointer, ): struct_miqt_string {.importc: "QAbstractAudioOutput_category".}
proc fcQAbstractAudioOutput_setCategory(self: pointer, category: struct_miqt_string): void {.importc: "QAbstractAudioOutput_setCategory".}
proc fcQAbstractAudioOutput_errorChanged(self: pointer, error: cint): void {.importc: "QAbstractAudioOutput_errorChanged".}
proc fQAbstractAudioOutput_connect_errorChanged(self: pointer, slot: int) {.importc: "QAbstractAudioOutput_connect_errorChanged".}
proc fcQAbstractAudioOutput_stateChanged(self: pointer, state: cint): void {.importc: "QAbstractAudioOutput_stateChanged".}
proc fQAbstractAudioOutput_connect_stateChanged(self: pointer, slot: int) {.importc: "QAbstractAudioOutput_connect_stateChanged".}
proc fcQAbstractAudioOutput_notify(self: pointer, ): void {.importc: "QAbstractAudioOutput_notify".}
proc fQAbstractAudioOutput_connect_notify(self: pointer, slot: int) {.importc: "QAbstractAudioOutput_connect_notify".}
proc fcQAbstractAudioOutput_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAudioOutput_tr2".}
proc fcQAbstractAudioOutput_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAudioOutput_tr3".}
proc fcQAbstractAudioOutput_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAudioOutput_trUtf82".}
proc fcQAbstractAudioOutput_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAudioOutput_trUtf83".}
proc fcQAbstractAudioOutput_delete(self: pointer) {.importc: "QAbstractAudioOutput_delete".}
proc fcQAbstractAudioInput_metaObject(self: pointer, ): pointer {.importc: "QAbstractAudioInput_metaObject".}
proc fcQAbstractAudioInput_metacast(self: pointer, param1: cstring): pointer {.importc: "QAbstractAudioInput_metacast".}
proc fcQAbstractAudioInput_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAbstractAudioInput_metacall".}
proc fcQAbstractAudioInput_tr(s: cstring): struct_miqt_string {.importc: "QAbstractAudioInput_tr".}
proc fcQAbstractAudioInput_trUtf8(s: cstring): struct_miqt_string {.importc: "QAbstractAudioInput_trUtf8".}
proc fcQAbstractAudioInput_start(self: pointer, device: pointer): void {.importc: "QAbstractAudioInput_start".}
proc fcQAbstractAudioInput_start2(self: pointer, ): pointer {.importc: "QAbstractAudioInput_start2".}
proc fcQAbstractAudioInput_stop(self: pointer, ): void {.importc: "QAbstractAudioInput_stop".}
proc fcQAbstractAudioInput_reset(self: pointer, ): void {.importc: "QAbstractAudioInput_reset".}
proc fcQAbstractAudioInput_suspend(self: pointer, ): void {.importc: "QAbstractAudioInput_suspend".}
proc fcQAbstractAudioInput_resume(self: pointer, ): void {.importc: "QAbstractAudioInput_resume".}
proc fcQAbstractAudioInput_bytesReady(self: pointer, ): cint {.importc: "QAbstractAudioInput_bytesReady".}
proc fcQAbstractAudioInput_periodSize(self: pointer, ): cint {.importc: "QAbstractAudioInput_periodSize".}
proc fcQAbstractAudioInput_setBufferSize(self: pointer, value: cint): void {.importc: "QAbstractAudioInput_setBufferSize".}
proc fcQAbstractAudioInput_bufferSize(self: pointer, ): cint {.importc: "QAbstractAudioInput_bufferSize".}
proc fcQAbstractAudioInput_setNotifyInterval(self: pointer, milliSeconds: cint): void {.importc: "QAbstractAudioInput_setNotifyInterval".}
proc fcQAbstractAudioInput_notifyInterval(self: pointer, ): cint {.importc: "QAbstractAudioInput_notifyInterval".}
proc fcQAbstractAudioInput_processedUSecs(self: pointer, ): clonglong {.importc: "QAbstractAudioInput_processedUSecs".}
proc fcQAbstractAudioInput_elapsedUSecs(self: pointer, ): clonglong {.importc: "QAbstractAudioInput_elapsedUSecs".}
proc fcQAbstractAudioInput_error(self: pointer, ): cint {.importc: "QAbstractAudioInput_error".}
proc fcQAbstractAudioInput_state(self: pointer, ): cint {.importc: "QAbstractAudioInput_state".}
proc fcQAbstractAudioInput_setFormat(self: pointer, fmt: pointer): void {.importc: "QAbstractAudioInput_setFormat".}
proc fcQAbstractAudioInput_format(self: pointer, ): pointer {.importc: "QAbstractAudioInput_format".}
proc fcQAbstractAudioInput_setVolume(self: pointer, volume: float64): void {.importc: "QAbstractAudioInput_setVolume".}
proc fcQAbstractAudioInput_volume(self: pointer, ): float64 {.importc: "QAbstractAudioInput_volume".}
proc fcQAbstractAudioInput_errorChanged(self: pointer, error: cint): void {.importc: "QAbstractAudioInput_errorChanged".}
proc fQAbstractAudioInput_connect_errorChanged(self: pointer, slot: int) {.importc: "QAbstractAudioInput_connect_errorChanged".}
proc fcQAbstractAudioInput_stateChanged(self: pointer, state: cint): void {.importc: "QAbstractAudioInput_stateChanged".}
proc fQAbstractAudioInput_connect_stateChanged(self: pointer, slot: int) {.importc: "QAbstractAudioInput_connect_stateChanged".}
proc fcQAbstractAudioInput_notify(self: pointer, ): void {.importc: "QAbstractAudioInput_notify".}
proc fQAbstractAudioInput_connect_notify(self: pointer, slot: int) {.importc: "QAbstractAudioInput_connect_notify".}
proc fcQAbstractAudioInput_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAudioInput_tr2".}
proc fcQAbstractAudioInput_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAudioInput_tr3".}
proc fcQAbstractAudioInput_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAudioInput_trUtf82".}
proc fcQAbstractAudioInput_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAudioInput_trUtf83".}
proc fcQAbstractAudioInput_delete(self: pointer) {.importc: "QAbstractAudioInput_delete".}


func init*(T: type QAbstractAudioDeviceInfo, h: ptr cQAbstractAudioDeviceInfo): QAbstractAudioDeviceInfo =
  T(h: h)
proc metaObject*(self: QAbstractAudioDeviceInfo, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQAbstractAudioDeviceInfo_metaObject(self.h))

proc metacast*(self: QAbstractAudioDeviceInfo, param1: cstring): pointer =

  fcQAbstractAudioDeviceInfo_metacast(self.h, param1)

proc metacall*(self: QAbstractAudioDeviceInfo, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQAbstractAudioDeviceInfo_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QAbstractAudioDeviceInfo, s: cstring): string =

  let v_ms = fcQAbstractAudioDeviceInfo_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QAbstractAudioDeviceInfo, s: cstring): string =
